Add manifest uploading
